# Jabari_Mars_Rover

./: .gitignore  LICENSE  README.md
camera_publisher_pkg/: camera_launch.sh  camera_publisher.py  web_streamer.py
jabari_log_dashboard/: README.md  requirements.txt  ros2_log_server.py
jabari_log_dashboard/static/: dashboard.html
manual_control/: jabari_client_start.sh  network_env_client.sh  package.xml
manual_control/config/: manual_control_params.yaml
manual_control/launch/: manual_control.launch.py
manual_control/manual_control/: button_mapper.py  client_launch.sh  manual_19_07_1520.txt  manual_21_01_2025.txt  manual_control_node.py  teleop.yaml
manual_control/manual_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
notes/: Application Editing.md  CameraTesting.ipynb
src/camera_stream_pkg/: package.xml  setup.cfg  setup.py
src/camera_stream_pkg/camera_stream_pkg/: camera_node.py  camera_publisher.py  picamera_node.py
src/manual_control_pkg/: CMakeLists.txt  package.xml  setup.py
src/manual_control_pkg/config/: manual_control_params.yaml
src/manual_control_pkg/launch/: manual_control.launch.py  manual_control.launch.xml
src/manual_control_pkg/manual_control_pkg/: README.md  manual_control_node.py
src/manual_control_pkg/test/: test_manual_control.py
src/motor_control_pkg/: package.xml  setup.py
src/motor_control_pkg/config/: motors.yaml
src/motor_control_pkg/launch/: robot_launch.py
src/motor_control_pkg/motor_control_pkg/: .keyboard_control_node.py.swo  keyboard_control_node.py  motor_controller_node.py  rear_motor_driver_node.py  sided_motor_driver_node.py
src/web_interface_pkg/: package.xml  setup.cfg  setup.py
src/web_interface_pkg/config/: web_config.yaml
src/web_interface_pkg/launch/: web_camera.launch.py  web_interface.launch.py
src/web_interface_pkg/web_interface_pkg/: ros2_web_bridge.py  web_bridge_node.py  websocket_handler.py
web_app/: README.md  index.html  package-lock.json  package.json  vite.config.js
web_app/public/: cameraApp.py  index.html  test.py  test.sh
web_app/public/src/components/: CameraFeed.js  PanTiltControl.js  ROS2CameraFeed.js  SystemMonitor.js  robot-control.js  ros2-interface.js  sensor-dashboard.js
web_app/public/src/services/: ros2-service-manager.js
web_app/src/: App.svelte  main.js
web_app/src/assets/: styles.css
web_app/src/lib/: stores.js
web_app/src/lib/components/: CameraFeed.svelte  LastCommand.svelte  PanTiltControl.svelte  RobotControl.svelte  SensorDashboard.svelte  SystemMonitor.svelte
web_app/src/lib/services/: ros-websocket.js  webrtc-client.js
