<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_stream_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mwaura@todo.todo">mwaura</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv-python</depend>
  <depend>numpy</depend>
  <depend>v4l-utilis</depend>
  <depend>picamera2</depend>
  <depend>requests</depend>
  <depend>urillib3</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
