<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>manual_control</name>
  <version>1.0.0</version>

  <description>Manual control node for JABARI Mars Rover. Handles manual velocity commands
    from various input sources (web interface, joystick, remote control) and
    publishes them to the rover's command system with safety features and monitoring.
  </description>
    <!-- Package Maintainer Information -->
  <maintainer email="nathan@jabari-rover.com">Nathan</maintainer>
  <author email="nathan@jabari-rover.com">Nathan</author>
  <license>MIT</license>

    <!-- Package URLs -->
  <url type="website">https://github.com/jabari-rover/manual-control</url>
  <url type="bugtracker">https://github.com/jabari-rover/manual-control/issues</url>
  <url type="repository">https://github.com/jabari-rover/manual-control</url>

    <!-- Build Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

   <!-- Python dependencies --> 
  <exec_depend>python3-setuptools</exec_depend>
  
  <!-- Test Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
