<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_control_pkg</name>
  <version>0.1.0</version>
  <description>ROS 2 package for motor control with Raspberry Pi GPIO support</description>
  <maintainer email="samkiche@example.com">Samuel Kiche</maintainer>
  <license>Apache License 2.0</license>

  <!-- Core ROS 2 dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Hardware-specific dependencies -->
  <exec_depend condition="$ROS_PLATFORM == 'linux'">RPi.GPIO</exec_depend>

  <!-- Launch system dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
